--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cisco_app",
+  "name": "revel_app",
   "version": "1.0.0",
-  "description": "Cisco standalone app",
+  "description": "Revel App",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,13 +14,17 @@
     "method-override": "2.3.6",
     "errorhandler": "1.4.3",
     "serve-favicon": "2.3.0",
-    "jive-sdk":"*",
     "consolidate": "0.14.1",
     "q": "1.4.1",
     "request": "2.74.0",
     "pg":"6.4.0",
     "rgb-hex":"2.1.0",
     "pdfkit":"0.8.3",
-    "node-datetime":"1.0.1"
+    "node-datetime":"1.0.1",
+    "bcrypt": "0.0.3",
+    "cookie-parser": "^1.4.3",
+    "express-session": "^1.15.6",
+    "morgan": "^1.9.0",
+    "sequelize": "^4.13.5"
   }
 }
