--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "rgb-hex":"2.1.0",
     "pdfkit":"0.8.3",
     "node-datetime":"1.0.1",
-    "bcrypt": "0.0.3",
+    "bcrypt-nodejs": "0.0.3",
     "cookie-parser": "^1.4.3",
     "express-session": "^1.15.6",
     "morgan": "^1.9.0",
